feat: add doc track
