# src/track/track.controller.ts
@@ -14,22 +14,52 @@ import {
 import { TrackService } from './track.service';
 import { CreateTrackDto } from './dto/create-track.dto';
 import { UpdateTrackDto } from './dto/update-track.dto';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { Track } from './entities/track.entity';
 
+@ApiTags('Track')
 @Controller('track')
 export class TrackController {
   constructor(private readonly trackService: TrackService) {}
 
   @Post()
-  create(@Body() createTrackDto: CreateTrackDto) {
+  @ApiOperation({ summary: 'Create a new track' })
+  @ApiResponse({
+    status: 201,
+    description: 'The track has been successfully created.',
+    type: Track,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Bad request. Invalid input data.',
+  })
+  create(@Body() createTrackDto: CreateTrackDto): Track {
     return this.trackService.create(createTrackDto);
   }
 
   @Get()
-  findAll() {
+  @ApiOperation({ summary: 'Get all tracks' })
+  @ApiResponse({
+    status: 200,
+    description: 'List of all tracks',
+    type: [Track],
+  })
+  findAll(): Track[] {
     return this.trackService.findAll();
   }
 
   @Get(':id')
+  @ApiOperation({ summary: 'Get a single track by ID' })
+  @ApiResponse({
+    status: 200,
+    description: 'The track was successfully retrieved.',
+    type: Track,
+  })
+  @ApiResponse({ status: 400, description: 'Invalid UUID format.' })
+  @ApiResponse({
+    status: 404,
+    description: 'Track not found.',
+  })
   findOne(@Param('id', new ParseUUIDPipe()) id: string) {
     const track = this.trackService.findOne(id);
     if (!track) {
@@ -39,6 +69,20 @@ export class TrackController {
   }
 
   @Put(':id')
+  @ApiOperation({ summary: 'Update track details' })
+  @ApiResponse({
+    status: 200,
+    description: 'The track has been successfully updated.',
+    type: Track,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Bad request. Invalid input data.',
+  })
+  @ApiResponse({
+    status: 404,
+    description: 'Track not found.',
+  })
   update(
     @Param('id', new ParseUUIDPipe()) id: string,
     @Body() updateTrackDto: UpdateTrackDto,
@@ -47,6 +91,16 @@ export class TrackController {
   }
 
   @Delete(':id')
+  @ApiOperation({ summary: 'Delete a track' })
+  @ApiResponse({
+    status: 204,
+    description: 'The track has been successfully deleted.',
+  })
+  @ApiResponse({ status: 400, description: 'Invalid UUID format.' })
+  @ApiResponse({
+    status: 404,
+    description: 'Track not found.',
+  })
   @HttpCode(HttpStatus.NO_CONTENT)
   remove(@Param('id', new ParseUUIDPipe()) id: string) {
     return this.trackService.remove(id);
